# fibremodes

./: .gitignore  CHANGELOG.md  ModesGen.py  README.md  __init__.py  mode_generation_core_library.py  pyproject.toml  pyrightconfig.json  requirements.txt  scalarmodesolver.py  scalarmodesolver_examples.ipynb  transmission_matrix_generator.py
analytical/: __init__.py
analytical/HG/: __init__.py  fibremodes.py
analytical/LG/: ModesGen.py  __init__.py
analytical/LG/toolbox/: __init__.py  mode_generation_core_library.py
scripts/: release.py
solvers/: __init__.py
tests/: analytical_modes_test.ipynb  scalarmodesolver_examples.ipynb
utilities/: __init__.py  overlaps.py
