[project]
name = "fibremodes"
version = "1.1.1"
description = "Fibre mode calculation — scalar solver and analytical basis calculation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0,<2.6",
  "scipy>=1.14,<1.17",
  "numexpr>=2.8",
  "numba>=0.57",
]

[project.optional-dependencies]
gpu = ["cupy-cuda13x>=14.0"]
parallel = ["ipyparallel>=8.0"]
notebooks = ["matplotlib>=3.7", "jupyter>=1.0", "ipykernel>=6.0", "laserbeamsize"]

[project.urls]
Repository = "https://github.com/MarKo7s/fibremodes"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"fibremodes" = "."}
packages = [
  "fibremodes",
  "fibremodes.solvers",
  "fibremodes.analytical",
  "fibremodes.analytical.LG",
  "fibremodes.analytical.LG.toolbox",
  "fibremodes.analytical.HG",
  "fibremodes.utilities",
]
